<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<com.example.bechat.customview.ToolbarView
		android:layout_width="match_parent"
		android:layout_height="?android:attr/actionBarSize"
		app:style="back"
		app:text_back="@string/profile"
		android:id="@+id/toolbarEditProfile"
		app:contentInsetEnd="0dp"
		app:contentInsetStart="0dp"
		android:background="?attr/colorPrimary"
		app:popupTheme="?attr/actionBarPopupTheme"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="30sp"
		android:background="@color/whiteGrayColor"
		android:text="@string/edit_profile"
		android:textStyle="bold"
		android:textColor="#090808"
		android:paddingStart="20dp"
		android:id="@+id/resetText"
		/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="70dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:clickable="true"
			>

			<EditText
				android:id="@+id/newNameEtx"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:hint="@string/new_name_user"
				android:background="@drawable/bg_edit_text"
				android:paddingStart="20dp"
				android:inputType="textEmailAddress"
				android:textSize="@dimen/sp_13"
				android:layout_marginStart="15dp"
				android:layout_marginEnd="15dp"
				app:layout_constraintTop_toBottomOf="@id/resetText"
				android:visibility="gone"/>

			<EditText
				android:id="@+id/oldPassEtx"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:hint="@string/old_password"
				android:background="@drawable/bg_edit_text"
				android:paddingStart="20dp"
				android:inputType="textPassword"
				android:textSize="@dimen/sp_13"
				android:layout_marginStart="15dp"
				android:layout_marginEnd="15dp"
				android:layout_marginTop="10dp"
				app:layout_constraintTop_toBottomOf="@id/resetText"
				android:visibility="gone"/>

			<EditText
				android:id="@+id/newPassEtx"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:hint="@string/new_pass_user"
				android:background="@drawable/bg_edit_text"
				android:paddingStart="20dp"
				android:inputType="textPassword"
				android:textSize="@dimen/sp_13"
				android:layout_marginStart="15dp"
				android:layout_marginEnd="15dp"
				android:layout_marginTop="10dp"
				app:layout_constraintTop_toBottomOf="@id/resetText"
				android:visibility="gone"/>

			<EditText
				android:id="@+id/confirmNewPassEtx"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:hint="@string/password_confirm"
				android:background="@drawable/bg_edit_text"
				android:paddingStart="20dp"
				android:inputType="textPassword"
				android:textSize="@dimen/sp_13"
				android:layout_marginStart="15dp"
				android:layout_marginEnd="15dp"
				android:layout_marginTop="10dp"
				app:layout_constraintTop_toBottomOf="@id/resetText"
				android:visibility="gone"/>

			<Button
				android:id="@+id/saveBtn"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:background="@drawable/bg_button"
				android:text="@string/save"
				android:gravity="center"
				android:textSize="@dimen/sp_15"
				android:textColor="@color/colorWhite"
				android:layout_marginStart="15dp"
				android:layout_marginEnd="15dp"
				android:layout_marginTop="40dp"
				android:textAllCaps="false"
				/>
		</LinearLayout>
	</ScrollView>




</LinearLayout>