<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:background="#80A29B9B"
	android:layout_height="wrap_content">

	<TextView
		android:id="@+id/viewAvatarTx"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="@drawable/bg_search"
		android:text="@string/view_avatar"
		android:gravity="center"
		android:textSize="20dp"
		android:textColor="@color/colorMainBlue"
		android:layout_marginTop="5dp"
		/>
	<TextView
		android:id="@+id/editAvatarTx"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="@drawable/bg_search"
		android:text="@string/edit_avatar"
		android:gravity="center"
		android:textSize="20dp"
		android:textColor="@color/colorMainBlue"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="10dp"
		/>
	<TextView
		android:id="@+id/cancelBtn"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="@drawable/bg_search"
		android:text="@string/cancel"
		android:gravity="center"
		android:textSize="20dp"
		android:textColor="@color/colorMainBlue"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="7dp"
		android:textStyle="bold"
		/>

</LinearLayout>