<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorWhite">
	<com.example.bechat.customview.ToolbarView
		android:layout_width="match_parent"
		android:layout_height="?android:attr/actionBarSize"
		app:style="back"
		app:text_back="@string/login"
		android:id="@+id/toolbarSignUp"
		app:contentInsetEnd="0dp"
		app:contentInsetStart="0dp"
		android:background="?attr/colorPrimary"
		app:popupTheme="?attr/actionBarPopupTheme"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="34sp"
		android:background="@color/whiteGrayColor"
		android:layout_below="@id/toolbarSignUp"
		android:text="@string/register"
		android:textStyle="bold"
		android:textColor="#090808"
		android:paddingStart="20dp"
		android:id="@+id/registerText"
		/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/registerText"
		>

		<LinearLayout
			android:id="@+id/layoutScroll"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="100dp"
			android:gravity="center_horizontal"
			android:orientation="vertical"
			android:paddingStart="20dp"
			android:paddingEnd="20dp"
			>
			<ImageView
				android:layout_width="100dp"
				android:layout_height="100dp"
				android:id="@+id/avatarRegisterImg"
				android:layout_marginTop="20dp"/>

			<EditText
				android:id="@+id/userNameRegisterEdit"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:paddingStart="10dp"
				android:hint="@string/user_name"
				android:background="@drawable/bg_edit_text"
				android:inputType="text"
				android:textSize="@dimen/sp_13"
				android:layout_marginTop="15dp"/>
			<EditText
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:id="@+id/emailRegisterEdit"
				android:hint="@string/email"
				android:paddingStart="10dp"
				android:background="@drawable/bg_edit_text"
				app:layout_constraintStart_toStartOf="parent"
				android:inputType="textEmailAddress"
				android:textSize="@dimen/sp_13"
				android:layout_marginTop="15dp"
				/>
			<EditText
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:id="@+id/passWordRegisterEdit"
				android:hint="@string/password"
				android:paddingStart="10dp"
				android:background="@drawable/bg_edit_text"
				app:layout_constraintStart_toStartOf="parent"
				android:inputType="textPassword"
				android:textSize="@dimen/sp_13"
				android:drawableEnd="@drawable/ic_hide"
				android:layout_marginTop="15dp"
				/>
			<EditText
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:id="@+id/password2RegisterEdit"
				android:hint="@string/password_confirm"
				android:paddingStart="10dp"
				android:background="@drawable/bg_edit_text"
				app:layout_constraintStart_toStartOf="parent"
				android:inputType="textPassword"
				android:textSize="@dimen/sp_13"
				android:imeOptions="flagNoFullscreen"
				android:drawableEnd="@drawable/ic_hide"
				android:layout_marginTop="15dp"
				/>
			<Button
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:background="@drawable/bg_button"
				app:layout_constraintStart_toStartOf="parent"
				android:text="@string/login"
				android:textColor="@color/colorWhite"
				android:gravity="center"
				android:textSize="@dimen/sp_15"
				android:id="@+id/loginBtnRegis"
				android:layout_marginTop="20dp"
				android:textAllCaps="false"
				/>

		</LinearLayout>

	</ScrollView>

</RelativeLayout>