<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<com.example.bechat.customview.ToolbarView
		android:layout_width="match_parent"
		android:layout_height="?android:attr/actionBarSize"
		app:style="back"
		app:text_back="@string/login"
		android:id="@+id/toolbarReset"
		app:contentInsetEnd="0dp"
		app:contentInsetStart="0dp"
		android:background="?attr/colorPrimary"
		app:popupTheme="?attr/actionBarPopupTheme"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="30sp"
		android:background="@color/whiteGrayColor"
		android:layout_below="@id/toolbarReset"
		android:text="@string/reset"
		android:textStyle="bold"
		android:textColor="#090808"
		android:paddingStart="20dp"
		android:id="@+id/resetText"
		/>

	<EditText
		android:id="@+id/emailResetEdittext"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:hint="@string/email"
		android:background="@drawable/bg_edit_text"
		android:paddingStart="20dp"
		android:inputType="textEmailAddress"
		android:textSize="@dimen/sp_13"
		android:layout_marginStart="15dp"
		android:layout_marginEnd="15dp"
		android:layout_marginTop="70dp"
		app:layout_constraintTop_toBottomOf="@id/resetText"/>

	<Button
		android:id="@+id/resetBtn"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:background="@drawable/bg_button"
		android:text="@string/reset"
		android:gravity="center"
		android:textSize="@dimen/sp_15"
		android:textColor="@color/colorWhite"
		android:layout_marginStart="15dp"
		android:layout_marginEnd="15dp"
		android:layout_marginTop="15dp"
		android:textAllCaps="false"
		/>

</LinearLayout>