<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<com.example.bechat.customview.ToolbarView
		android:layout_width="match_parent"
		android:layout_height="?android:attr/actionBarSize"
		app:style="back"
		app:text_back="@string/profile"
		android:id="@+id/toolbarEditAvatar"
		app:contentInsetEnd="0dp"
		app:contentInsetStart="0dp"
		android:background="?attr/colorPrimary"
		app:popupTheme="?attr/actionBarPopupTheme"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/editAvatarTx"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="30sp"
		android:background="@color/whiteGrayColor"
		android:text="@string/edit_avatar"
		android:textStyle="bold"
		android:textColor="#090808"
		android:paddingStart="20dp"
		app:layout_constraintTop_toBottomOf="@id/toolbarEditAvatar"
		/>

	<ImageView
		android:id="@+id/avatarImg"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:src="@drawable/ic_add_circle"
		app:layout_constraintTop_toBottomOf="@id/editAvatarTx"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toTopOf="@id/saveBtn"
		/>

	<Button
		android:id="@+id/saveBtn"
		android:layout_width="100dp"
		android:layout_height="40dp"
		android:layout_marginTop="30dp"
		android:layout_marginBottom="30dp"
		android:textColor="@color/colorWhite"
		android:text="@string/save"
		android:textAllCaps="false"
		android:background="@drawable/bg_button"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		/>



</androidx.constraintlayout.widget.ConstraintLayout>