<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorMainBlue">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="40dp"
		android:layout_marginTop="10dp"
		android:text="@string/profile"
		android:textColor="@color/colorWhite"
		android:textSize="30sp"
		android:textStyle="bold" />

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="150dp"
		android:background="@drawable/bg_chat">

		<TextView
			android:id="@+id/nameUserProfile"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="70dp"
			android:layout_centerHorizontal="true"
			android:textSize="30dp"
			android:textColor="@color/colorMainBlue"
			/>
		<TextView
			android:id="@+id/emailUserProfile"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/nameUserProfile"
			android:layout_centerHorizontal="true"
			/>

		<TextView
			android:id="@+id/editUserNameTx"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:layout_marginStart="15dp"
			android:layout_marginTop="35dp"
			android:layout_marginEnd="15dp"
			android:text="@string/user_name"
			android:gravity="center_vertical"
			android:background="@drawable/bg_edit_text"
			android:layout_below="@+id/emailUserProfile"
			android:drawableEnd="@drawable/ic_edit"
			android:paddingStart="20dp"
			android:textSize="@dimen/sp_13" />

		<TextView
			android:id="@+id/editPasswordTx"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:layout_marginStart="15dp"
			android:layout_marginTop="5dp"
			android:layout_marginEnd="15dp"
			android:text="@string/password"
			android:gravity="center_vertical"
			android:background="@drawable/bg_edit_text"
			android:layout_below="@+id/editUserNameTx"
			android:drawableEnd="@drawable/ic_edit"
			android:paddingStart="20dp"
			android:textSize="@dimen/sp_13" />

		<RelativeLayout
			android:id="@+id/editLanguagePlace"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:layout_marginStart="15dp"
			android:layout_marginTop="30dp"
			android:layout_marginEnd="15dp"
			android:background="@drawable/bg_edit_text"
			android:layout_below="@+id/editPasswordTx"
			>
			<TextView
				android:id="@+id/languageTx"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/language"
				android:gravity="center_vertical"
				android:background="@drawable/bg_edit_text"
				android:layout_marginTop="5dp"
				android:layout_marginStart="20dp"
				android:textSize="@dimen/sp_13" />

			<TextView
				android:id="@+id/languageChoseTx"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="EN"
				android:gravity="center_vertical"
				android:background="@drawable/bg_edit_text"
				android:layout_marginTop="3dp"
				android:layout_marginStart="30dp"
				android:layout_below="@id/languageTx"
				android:textColor="@color/colorBlack"
				android:textSize="@dimen/sp_13" />

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentEnd="true"
				android:src="@drawable/ic_edit"
				android:layout_centerVertical="true"
				/>
		</RelativeLayout>



		<TextView
			android:id="@+id/editThemeTx"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:layout_marginStart="15dp"
			android:layout_marginTop="5dp"
			android:layout_marginEnd="15dp"
			android:text="@string/theme"
			android:gravity="center_vertical"
			android:background="@drawable/bg_edit_text"
			android:layout_below="@+id/editLanguagePlace"
			android:drawableEnd="@drawable/ic_edit"
			android:paddingStart="20dp"
			android:textSize="@dimen/sp_13" />



	</RelativeLayout>

	<ImageView
		android:id="@+id/avatarUserProfile"
		android:layout_width="120dp"
		android:layout_height="120dp"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="95dp"
		android:background="@drawable/ic_user"
		/>

	<Button
		android:id="@+id/logoutBtn"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:background="@drawable/bg_red_button"
		android:text="Log out"
		android:gravity="center"
		android:textSize="@dimen/sp_15"
		android:textColor="@color/colorWhite"
		android:layout_marginStart="15dp"
		android:layout_marginEnd="15dp"
		android:layout_marginTop="15dp"
		android:layout_marginBottom="20dp"
		android:textAllCaps="false"
		android:layout_alignParentBottom="true"
		/>

</RelativeLayout>