<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.bechat.customview.ToolbarView
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:style="title"
        app:text_act="@string/create"
        android:id="@+id/toolbar"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        android:background="?attr/colorPrimary"
        app:popupTheme="?attr/actionBarPopupTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/ic_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        />
    <EditText
        android:id="@+id/nameEdittext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/name1"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="20dp"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/sp_13"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/imageView"/>

    <EditText
        android:id="@+id/emailEdittext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textSize="@dimen/sp_13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <EditText
        android:id="@+id/passwordEdittext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/password"
        android:drawableEnd="@drawable/ic_hide"
        android:paddingEnd="10dp"
        android:paddingStart="20dp"
        android:inputType="textPassword"
        android:textSize="@dimen/sp_13"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/emailEdittext"/>


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdittext" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorWhite"

        android:gravity="center"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorMainBlue"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdittext" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/signUpCard"
        android:background="@color/whiteGrayColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>